[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
tyrannousarust-rex-world-generator = { version = "0.5.0",registry = "kellnr" }
rurel = "0.5.1"
log = "0.4.20"
image = "0.24.8"
fish_by_ifrustrati = { version = "0.1.1",registry = "kellnr" }

